--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -15,6 +15,7 @@
   .app-layout-container {
     width: calc(100vw - 190px);
     height: calc(100vh - 61px);
-    background: #666;
+    background: #fff;
+    padding: 40px;
   }
 }
